# PsyNLP

./: .gitignore  README.md  article.md  main.py  predict_nlp.py  pyproject.toml  requirements.txt  sentence_process.py
nlp_models/bert-sentiment/: ._model.safetensors  config.json
nlp_models/model_bert/: config.json
nlp_models/model_sbert/: ._2_Normalize  ._vocab.txt  config.json
